--- a/directive/loaded.html
+++ b/directive/loaded.html
@@ -2,7 +2,7 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+loaded指令的作用</h3>
-    <div class="answer">“+loaded”指令在宿主元素挂载到DOM树之后（加载完成阶段）由框架触发调用，主要用于对宿主元素和作用域变量进行初始化操作。</div>
+    <div class="answer">“+loaded”指令在宿主元素连接到DOM树之后（加载完成阶段）由框架触发调用，主要用于对宿主元素和作用域变量进行初始化操作。</div>
     <h3 class="question">+loaded指令的执行结果</h3>
     <div class="answer">dagger.js不会对“+loaded”指令表达式的执行结果进行进一步处理。</div>
     <h3 class="question">+loaded指令示例</h3>
