--- a/directive/meta.html
+++ b/directive/meta.html
@@ -2,12 +2,9 @@
 <div class="content">
   <template $exist="language == 'zh-cn'">
     <h3 class="question">什么是元指令</h3>
-    <div class="answer">
-      <div>元指令是dagger.js在宿主元素的模板解析阶段触发执行的一组指令的统称，用于为dagger.js解析宿主元素提供“元数据”。</div>
-      <div>元指令的执行早于宿主元素上的其他任何指令。</div>
-    </div>
+    <div class="answer">元指令是dagger.js在宿主元素的模板解析阶段触发执行的一组指令的统称，用于为dagger.js解析宿主元素提供“元数据”。</div>
     <h3 class="question">元指令有哪些</h3>
-    <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@dynamic</a></div>
+    <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
   </template>
   <template $exist="language == 'en-us'">
     <template $each="$['directive.controller.sections']">
