--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <div id="header">
       <h1>🗡️ dagger.js</h1>
-      <!--<a id="github-link" href="https://github.com/dagger8224/dagger.js">${ $.viewOnGithub }</a>-->
+      <a id="github-link" href="https://github.com/dagger8224/dagger.js">${ $.viewOnGithub }</a>
       <select id="language-select" $selected="language" +change="localStorage.setItem('language', language) || ($ = languages[language])">
         <option $each="$.languages" $text="item" $value="key"></option>
       </select>
